syntax = "proto3";

package user;

option go_package = "/user";

service UserService {
  rpc Create(User) returns (User);
  rpc Update(User) returns (User);
  rpc Delete(UserRequest) returns (User);
  rpc Get(UserRequest) returns (User);
  rpc GetAll(GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc CheckField(CheckUser) returns (CheckRes);
  rpc GetUserByEmail(EmailRequest) returns (User);
  rpc GetUserByRefreshToken(UserToken) returns (User);
}

message UserToken {
  string refresh_token = 1;
}

message EmailRequest {
  string email = 1;
  string password = 2;
}

message CheckUser {
  string field = 1;
  string value = 2;
}

message CheckRes {
  bool exists = 1;
}

message Comment {
  string id = 1;
  string content = 2;
  string createdAt = 3;
  string updatedAt = 4;
  string deletedAt = 5;
  string post_id = 6;
  string owner_id = 7;
}

message Post {
  string id = 1;
  string title = 2;
  string image_url = 3;
  repeated Comment all_comments = 4;
}

message GetAllUsersRequest {
  int64 page = 1;
  int64 limit = 2;
}

message GetAllUsersResponse {
  repeated User allUsers = 1;
}

message UserRequest {
  string userId = 1;
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string phone_number = 5;
  string bio = 6;
  uint64 age = 7;
  string gender = 8;
  string email = 9;
  string password = 10;
  string refresh_token = 11;
  string created_at = 12;
  string updated_at = 13;
  string deleted_at = 14;
  repeated Post posts = 15;
}